# trellis

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  HIERARCHICAL_CONTENT.md  INCLUDES.md  LICENSE  PUBLISHING.md  QUICKSTART.md  README.md  config.py  init_db.py  migration_report.txt  mkdocs.yml  pyproject.toml  requirements.txt  setup_production.sh  tmih_flask.wsgi
app/: __init__.py  models.py  routes.py
app/templates/: article.html  base.html  editor_dashboard.html  garden.html  gardens_index.html  index.html
app/utils/: date_manager.py  garden_manager.py  git_handler.py  markdown_handler.py
content/: about.md
content/essays/: config.yaml  sample-essay.md
content/garden/: ai_docker_setup.md  building_an_app.md  couchdb.md  esp8266.md  flask_startup.md  home_assistant.md  hugo.md  javascript_orientation.md  linux_background_processes.md  markdown.md  my-first-post.md  quick_dev.md  software-tools-i-use.md  webserver.md
content/notes/: config.yaml
content/page-directories/: index.html
content/projects/: config.yaml
content/writing/: index.html
docs/: index.md
docs/content/: page-directories.md  structure.md  wiki-links.md  writing.md
docs/getting-started/: first-garden.md  installation.md  quickstart.md
docs/includes/: backup-git-setup.md  quickdev-dev-setup.md
docs/maintenance/: backup.md  indexing.md  updates.md
docs/reference/: api.md  architecture.md  deployment.md  development.md
hugo_migration/: extract_logo_colors.py  migrate_content.py  requirements.txt  setup.py
site/: 404.html  index.html
trellis/: __init__.py  cli.py  config.py  qd_conf.toml  qd_conf.yaml  routes.py
trellis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+45 files in other folders)
